<resources>
    <string name="app_name">Guide For PUBBG MOBILE</string>
    <string name="Attachements">ATTACHEMENTS</string>
    <string name="weapons">WEAPONS</string>
    <string name="ammunitions">AMMUNITIONS</string>
    <string name="throwables">THROWABLES</string>
    <string name="melle">MELLE</string>
    <string name="equipment">EQUIPMENTS</string>
    <string name="consumbales">CONSUMBALES</string>
    <string name="vehicles">VEHICLES</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="magazines">MAGAZINES</string>
    <string name="grips">GRIPS</string>
    <string name="scope">SCOPE</string>
    <string name="muzzels">MUZZELS</string>
    <string name="stocks">STOCKS</string>
    <string name="assquickdraw">Assault rifle quickdraw magazine</string>
    <string name="attachableweapons">attachable weapons</string>
    <string name="assaultrifles">Assault Rifles(AR)</string>
    <string name="sniperrifles">Sniper Rifles(SR)</string>
    <string name="autosniperrifles">Auto sniper Rifles(DMR)</string>
    <string name="submachine">Submachine gun(SMG)</string>
    <string name="lightmachine">Lightmachine gun(LMG)</string>
    <string name="shotguns">Shotguns(SG)</string>
    <string name="pistol">Pistols</string>
    <string name="g36c">G36C</string>
    <string name="mk47">Mk47 Mutant</string>
    <string name="m762">M762</string>
    <string name="qbz">QBZ</string>
    <string name="akm">AkM</string>
    <string name="groza">Groza</string>
    <string name="m16a4">M16A4</string>
    <string name="scarl">SCAR-L</string>
    <string name="m416">M416</string>
    <string name="aug">Aug A3</string>
    <string name="win94">WIN94</string>
    <string name="awm">AWM</string>
    <string name="m24">M24</string>
    <string name="kar98">kar98</string>
    <string name="mk12">MK12</string>
    <string name="qbu">QBU</string>
    <string name="mini14">MINI14</string>
    <string name="mk14">Mk14</string>
    <string name="slr">SLR</string>
    <string name="vss">VSS</string>
    <string name="sks">SKS</string>
    <string name="pp19bzon">PP-19 BIZON</string>
    <string name="thompson">THOMPSON</string>
    <string name="uzi">UZI</string>
    <string name="ump">UMP45</string>
    <string name="vector">VECTOR</string>
    <string name="p90">P90</string>
    <string name="mp5k">MP5K</string>
    <string name="m249">M249</string>
    <string name="dp">DP 28</string>
    <string name="s12k">S12K</string>
    <string name="s1897">S1897</string>
    <string name="s686">S686</string>
    <string name="dbs">DBS</string>
    <string name="skorpion">Skorpion</string>
    <string name="flaregun">Flare Gun</string>
    <string name="sawedoff">Sawed Off</string>
    <string name="p18c">P18C</string>
    <string name="r45">R45</string>
    <string name="r1895">R1895</string>
    <string name="p1911">P1911</string>
    <string name="p92">P92</string>
    <string name="deserteagle">Desert Eagle</string>
    <string name="quickdrawextendedmagsrdmr">quickdraw extended mag(sr,dmr)</string>
    <string name="ExtendedMagSRDMR">Extended Mag (SR,DMR)</string>
    <string name="quickdrawMagSRDMR">Quickdraw Mag (SR,DMR)</string>
    <string name="QuickdrawExtendedMagARDMR">Quickdraw Extended Mag (AR,DMR,S12K)</string>
    <string name="ExtendedMagARDMR">Extended Mag (AR,DMR,S12K)</string>
    <string name="QuickdrawMagARDMR">Quickdraw Mag (AR,DMR,S12K)</string>
    <string name="QuickdrawExtendedMagPistols">Quickdraw Extended Mag (Pistols)</string>
    <string name="ExtendedMagPistols">Extended Mag (Pistols)</string>
    <string name="QuickdrawMagPistols">Quickdraw Mag (Pistols)</string>
    <string name="QuickdrawExtendedMagSMG">Quickdraw Extended Mag (SMG)</string>
    <string name="ExtendedMagSMG">Extended Mag (SMG)</string>
    <string name="QuickdrawMagSMG">Quickdraw Mag (SMG)</string>
    <string name="lasersight">Laser Sight</string>
    <string name="thumbgrip">Thumb Grip</string>
    <string name="halfgrip">Half Grip</string>
    <string name="lightgrip">Light Grip</string>
    <string name="angledforegrip">Angled ForeGrip</string>
    <string name="verticalforegrip">Vertical ForeGrip</string>
    <string name="eightscope">8x Scope</string>
    <string name="sixscope">6x Scope</string>
    <string name="fourscope">4x Scope</string>
    <string name="threescope">3x Scope</string>
    <string name="twoscope">2x Scope</string>
    <string name="Holographicsight">Holographic Sight</string>
    <string name="RedDotSight">Red Dot Sight</string>
    <string name="PistolsSuppressor">Pistols Suppressor</string>
    <string name="Duckbill">Duckbill</string>
    <string name="Choke">Choke</string>
    <string name="SniperRiflesSuppressor">Sniper Rifles Suppressor</string>
    <string name="SMGSuppressor">SMG Suppressor</string>
    <string name="AssaultRiflesSuppressor">Assault Rifles Suppressor</string>
    <string name="SniperRiflesFlashHider">Sniper Rifles Flash Hiderr</string>
    <string name="SMGFlashHider">SMG Flash Hider</string>
    <string name="AssaultRiflesFlashHider">Assault Rifles Flash Hider</string>
    <string name="SniperRiflesCompensator">Sniper Rifles Compensator</string>
    <string name="SMGCompensator">SMG Compensatorr</string>
    <string name="AssaultRiflesCompensator">Assault Rifles Compensator</string>
    <string name="tactstock">Tact Stock (AR,SMG)</string>
    <string name="bulletloops">Bullet Loops (SR)</string>
    <string name="cheekpad">Cheek Pad (SR,DMR)</string>
    <string name="uzistock">Uzi Stock</string>
    <string name="fivesixammo">5.56mm</string>
    <string name="fourfiveammo">.45 ACP</string>
    <string name="sevensixammo">7.62mm</string>
    <string name="nineammo">9mm</string>
    <string name="guageammo">12 Gauge</string>
    <string name="boltammo">Bolt</string>
    <string name="flareammo">Flare</string>
    <string name="magnum">.300 Magnum</string>
    <string name="fourfiveammodetail">This .45 ACP round is a Light Bullet type
        with Low Damage Per Seconds but the bullet travels at High Speed at close range.
        Spawning with 15 or 30 bullets in one pack. It can be found anywhere around your loot spots.</string>
    <string name="sevensixammodetail">This 7.62mm round is a Heavy Bullet type with Highest Damage Per Seconds
        but the bullet travel at Medium Speed. Spawning with 15 or 30 bullets in one pack. It can be found anywhere
        around the loot spots.</string>
    <string name="fivesixammodetail">This 5.56mm round is a Medium Bullet type with High Damage Per Seconds and
        the bullet travel at High Speed. Spawning with 30 bullets in one pack. It can be found anywhere around the loot spots.</string>
    <string name="nineammodetail">This 9mm round is a Light Bullet type with Medium Damage Per Seconds but the bullet
        travel at Medium Speed. Spawning with 15 or 30 bullets in one pack. It can be found anywhere around your loot spots.</string>
    <string name="gaugeammodetail">This 12 Gauge round is a Heavy Bullet type with High Damage in Close Range. The Bullet
        Travel Speed is High in Close Range. Spawning with 10 bullets in one pack. You can find it anywhere around your loot spots.</string>
    <string name="magnumammodetail">This .300 Magnum is a Heavy Bullet type with High Damage in any Range. The Bullet Travel
        Speed is High in any range. Spawning with 10 bullets in 1 pack. It can only be found in AirDrop.</string>
    <string name="g36cdetail">G36C - PUBG Mobile. G36C fires 5.56mm rounds and
        has a single-mode as well as full-auto mode. A weapon that can be equipped
        with a variety of attachments and is great for all ranges. G36C is an all-round
        weapon without specific strengths or weaknesses.</string>
    <string name="akmdetail">AKM - PUBG MOBILE. AKM fires 7.62mm rounds and has both a single shot
        and full auto mode. AKM deals a lot of damage in a single shot, but its heavy recoil
        makes it harder to control.</string>
    <string name="mk47detail">Mk47 Mutant - PUBG Mobile. Mk47 Mutant fires 7.62mm rounds with 20 bullets
        per mag. It has both a single shot and double shot modes. Mk47 Mutant is a good medium-range weapon.</string>
    <string name="qbzdetail">QBZ - PUBG MOBILE. QBZ Fires 5.56mm rounds with a single-shot mode and a full-auto mode.
        Stable with low recoil, but slow when reloading and firing speed is not as fast as other 5.56mm rifles.</string>
    <string name="grozadetail">GROZA - PUBG MOBILE. GROZA obtained from airdrops, fires 7.62mm rounds and has both a single
        shot and a full auto mode. Deals a lot of damage in a single shot with a high rate of fire. It is the best
        mid-to-close-range automatic rifle.</string>
    <string name="m16a4detail">M16A4 - PUBG MOBILE. M16A4 Fires 5.56mm rounds and has both a single shot and a burst mode,
        which is very fast and deals high damage in close range. But it does not have a full auto mode, and the burst mode
        is difficult to master.</string>
    <string name="scarldetail">SCAR-L - PUBG MOBILE fires 5.56mm rounds and has both a single and a full auto mode. Light
        recoil, stability, and accuracy make this weapon easier to master. Its rate of fire is lower than other 5.56mm rifles.
        But a fine weapon nonetheless.</string>
    <string name="m416detail">M416 - PUBG MOBILE. M416 Fires 5.56mm rounds with 30 bullets per Mag. It has both a single shot
        and a full auto mode. It can be equipped with lots of attachments to become an all-rounder at any distance.</string>
    <string name="augdetail">AUG A3 - PUBG Mobile. Obtained from airdrops. Fire 5.56mm and has both a single short and a full
        auto mode. With light recoil and great performance in the mid-to-far range. it doesn\'t have any visible weakness.</string>
    <string name="win94detail">Win94 - PUBG MOBILE. Win94 fires .45rounds. Very powerful and fast, but cannot equipped with any scope.
    </string>
    <string name="awmdetail">AWM - PUBG MOBILE. Obtained from airdrops. It is the most powerful bolt sniper rifle and fires unique
        magnum rounds. Deals extremely high damage and ignores rank 3 headgear in long distance.
    </string>
    <string name="m24detail">M24 - PUBG MOBILE. M24 is a great bolt action sniper rifle that fires 7.62mm rounds.
        Second only to the AWM and can eliminate players in Lv.2 headgear with one shot. Relies heavily on scopes and skills.</string>
    <string name="kar98detail">Kar98K - PUBG MOBILE. This single bolt sniper rifle fire 7.62mm rounds that can one-short players
        in rank 2 headgear. Relies heavily on scope and skills.</string>
    <string name="mk12detail">PUBG Mobile 0.19.0 update has been released with a lot of cool features. Apart from the mind-blowing PUBG Mobile
        Livik map which unfold the chaotics world with more enemies and less time, the new updated version of PUBG Mobile also offers
        players with staggering weapons and the MK12 is no doubt the most special one.</string>
    <string name="umpdetail">UMP45 has single shot, double shot, and full auto mode. UMP45 is really good in close range combat.
        It has a high fire rate and very mobile. UMP9 requires lots of attachments so that it can be handled even better. </string>
    <string name="weapontype">Weapon Type</string>
    <string name="power">Base Damange</string>
    <string name="firerate">Fire Rate</string>
    <string name="aamotype">Ammo Type</string>
    <string name="magcapacity">Magazine Capacity</string>
    <string name="firingmode">Firing Mode</string>
    <string name="availability">Availability</string>
    <string name="reloadtime">Reload Time</string>
    <string name="compatibleattachements">Best Attachments</string>
</resources>