<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Weapons.SinperRifleSR">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/win94"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@mipmap/win94" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorcardviewbar"
                        android:gravity="center"
                        android:text="@string/win94"
                        android:textAllCaps="true"
                        android:textColor="@color/colorcardviewbartext" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/awm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@mipmap/awm" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorcardviewbar"
                        android:gravity="center"
                        android:text="@string/awm"
                        android:textAllCaps="true"
                        android:textColor="@color/colorcardviewbartext" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/m24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@mipmap/m24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorcardviewbar"
                        android:gravity="center"
                        android:text="@string/m24"
                        android:textAllCaps="true"
                        android:textColor="@color/colorcardviewbartext" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/kar98"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@mipmap/kar98" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorcardviewbar"
                        android:gravity="center"
                        android:text="@string/kar98"
                        android:textAllCaps="true"
                        android:textColor="@color/colorcardviewbartext" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/mk12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:src="@mipmap/mk12" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorcardviewbar"
                        android:gravity="center"
                        android:text="@string/mk12"
                        android:textAllCaps="true"
                        android:textColor="@color/colorcardviewbartext" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

</ScrollView>